--- a/policy/testdata/multiple_ranges/instance.yaml
+++ b/policy/testdata/multiple_ranges/instance.yaml
@@ -13,16 +13,6 @@
 # limitations under the License.
 
 apiVersion: policy.acme.co/v1
-kind: binauthz
+kind: multiple_ranges
 metadata:
-  name: binauthz-example
-rule:
-  verifiable_builders:
-    - build-secure
-  allowed_branch_names:
-    - allowed_branch
-  allowed_mint_build_targets:
-    - "//mint:target_1"
-    - "//mint:target_2"
-  allowed_nonmint_build_targets:
-    - "//nonmint:target"
+  name: singleton
