--- a/policy/testdata/multiple_ranges/instance.yaml
+++ b/policy/testdata/multiple_ranges/instance.yaml
@@ -1,4 +1,4 @@
-# Copyright 2019 Google LLC
+# Copyright 2020 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -13,18 +13,6 @@
 # limitations under the License.
 
 apiVersion: policy.acme.co/v1
-kind: restricted_destinations
+kind: multiple_ranges
 metadata:
-  name: us-economic-sanctions
-  namespace: acme
-rules:
-  - description: >
-      Prevent US access to data within countries currently under
-      economic sanction.
-    origin: "us"
-    restricted_destinations:
-      - "cu"
-      - "ir"
-      - "kp"
-      - "sd"
-      - "sy"
+  name: singleton
