--- a/policy/testdata/multiple_ranges/template.yaml
+++ b/policy/testdata/multiple_ranges/template.yaml
@@ -1,4 +1,4 @@
-# Copyright 2019 Google LLC
+# Copyright 2020 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -13,18 +13,27 @@
 # limitations under the License.
 
 apiVersion: policy.acme.co/v1
-kind: restricted_destinations
+kind: PolicyTemplate
 metadata:
-  name: us-economic-sanctions
-  namespace: acme
-rules:
-  - description: >
-      Prevent US access to data within countries currently under
-      economic sanction.
-    origin: "us"
-    restricted_destinations:
-      - "cu"
-      - "ir"
-      - "kp"
-      - "sd"
-      - "sy"
+  name: multiple_ranges
+evaluator:
+  description: >
+    Multiple ranges form a cross product. In the example, the
+    pattern 'a', 'b', 'c' is emitted unless the index of the
+    letter is equal to the index value in the outer range:
+        /  b  c
+        a  /  c
+        a  b  /
+
+  ranges:
+    - value: idx
+      in: >
+        [0, 1, 2]
+    - index: letterIdx
+      value: letter
+      in: >
+        ["a", "b", "c"]
+  productions:
+    - match: idx != letterIdx
+      decision: policy.report
+      output: letter
