Additional unit tests and negative end to end tests for Environments

--- a/test/testdata/test_env/env.bad_config.yaml
+++ b/test/testdata/test_env/env.bad_config.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: policy.test.v1.Environment
+name: policy.test.v1.bad.Environment
 variables:
   destination:
     type: policy.test.v1.Peer
@@ -37,6 +37,7 @@ variables:
             additionalProperties: {}
       time:
         type: timestamp
+variables:
   resource:
     type: policy.test.v1.Resource
     properties:
@@ -54,11 +55,11 @@ functions:
       location_code_string:
         free_function: true
         args:
-          - type: string
+          type: string
         return:
           type: string
     getOrDefault:
-      map_get_or_default:
+      map_get_or_default_param:
         args:
           - type: object
             additionalProperties:
