Move custom type name specification into schema metadata.
The environment and the template schema both specify custom type definitions
which may be backed by protobufs under the covers. The custom type definitions
should be specifiable in the same way to permit custom functions which accept
policy instance types as input.

Additionally, it is important to be able to support K8s CRD schemas as input
types directly into the environment, so the added alignment with Open API Schema
provides ease of use improvements with K8s as well.

There are also some refactors to share more code between OpenAPISchema and
DeclType compilation

--- a/test/testdata/binauthz/env.yaml
+++ b/test/testdata/binauthz/env.yaml
@@ -15,17 +15,23 @@
 name: binauthz.v1.Environment
 variables:
   request:
-    type: binauthz.v1.Request
+    type: object
+    metadata:
+      custom_type: binauthz.v1.Request
     properties:
       packages:
         type: array
         items:
-          type: binauthz.v1.Package
+          type: object
+          metadata:
+            custom_type: binauthz.v1.Package
           properties:
             name:
               type: string
             provenance:
-              type: binauthz.v1.Provenance
+              type: object
+              metadata:
+                custom_type: binauthz.v1.Provenance
               properties:
                 builder:
                   type: string
