--- a/test/testdata/test_env/env.bad_config.yaml
+++ b/test/testdata/test_env/env.bad_config.yaml
@@ -39,7 +39,9 @@ variables:
         type: timestamp
 variables:
   resource:
-    type: policy.test.v1.Resource
+    type: object
+    metadata:
+      custom_type: policy.test.v1.Resource
     properties:
       name:
         type: string
