--- a/test/testdata/test_env/env.yaml
+++ b/test/testdata/test_env/env.yaml
@@ -15,20 +15,28 @@
 name: policy.test.v1.Environment
 variables:
   destination:
-    type: policy.test.v1.Peer
+    type: object
+    metadata:
+      custom_type: policy.test.v1.Peer
     properties:
       ip:
         type: string
   origin:
-    type: policy.test.v1.Peer
+    type: object
+    metadata:
+      custom_type: policy.test.v1.Peer
     properties:
       ip:
         type: string
   request:
-    type: policy.test.v1.Request
+    type: object
+    metadata:
+      custom_type: policy.test.v1.Request
     properties:
       auth:
-        type: policy.test.v1.Auth
+        type: object
+        metadata:
+          custom_type: policy.test.v1.Auth
         properties:
           principal:
             type: string
@@ -36,9 +44,12 @@ variables:
             type: object
             additionalProperties: {}
       time:
-        type: timestamp
+        type: string
+        format: date-time
   resource:
-    type: policy.test.v1.Resource
+    type: object
+    metadata:
+      custom_type: policy.test.v1.Resource
     properties:
       name:
         type: string
