Support for list, map, object type conversion to native types

--- a/test/testdata/greeting/instance.yaml
+++ b/test/testdata/greeting/instance.yaml
@@ -26,6 +26,7 @@ rules:
   - greeting: "Hello"
   - farewell: "Farewell"
   - greeting: "You survived Y2K!"
+    farewell: "Aloha"
     computer_greeting: WUFZIFkySyE=
     start_date: "2000-01-01T00:00:00Z"
     end_date: "2000-01-07T00:00:00Z"
