Additional type specification support within Policy Template schemas

--- a/test/testdata/primitive_types/template.yaml
+++ b/test/testdata/primitive_types/template.yaml
@@ -1,9 +1,50 @@
+# Copyright 2020 Google LLC
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#    https://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
 apiVersion: policy.acme.co/v1
-kind: AdmissionTemplate
+kind: PolicyTemplate
 metadata:
-  name: AllTheTypes
-rules:
-  - value: true
-  - value: 1.2
-  - value: "1000"
-  - value:
+  name: primitive_types
+  namespace: acme
+schema:
+  type: object
+  properties:
+    values:
+      type: array
+      items:
+        type: object
+        properties:
+          bool:
+            type: boolean
+          float:
+            type: number
+          int:
+            type: string
+            format: int64
+          uint:
+            type: string
+            format: uint64
+          google_duration:
+            type: string
+            format: google-duration
+          google_timestamp:
+            type: string
+            format: google-datetime
+evaluator:
+  productions:
+    - decision: grant
+      output: >
+        string(rule.int + int(rule.uint)) + " " +
+        string(duration("6s") + rule.google_duration) + " " +
+        string(duration("86400s") + rule.google_timestamp))
