Support enumDescriptions property in the schema

--- a/test/testdata/test_env/env.bad_config.yaml
+++ b/test/testdata/test_env/env.bad_config.yaml
@@ -47,6 +47,12 @@ variables:
         type: string
       type:
         type: string
+      state:
+        type: string
+        enumDescriptions:
+          - 'the resource is enabled.'
+          - 'the resource is disabled.'
+          - 'the resource is in an unknown state.'
       labels:
         type: object
         additionalProperties:
