--- a/test/testdata/test_env/env.yaml
+++ b/test/testdata/test_env/env.yaml
@@ -55,6 +55,13 @@ variables:
         type: string
       type:
         type: string
+      state:
+        type: string
+        enum: ['ENABLED', 'DISABLED', "UNKNOWN"]
+        enumDescriptions:
+          - 'the resource is enabled.'
+          - 'the resource is disabled.'
+          - 'the resource is in an unknown state.'
       labels:
         type: object
         additionalProperties:
