Support the YAML timestamp tag

--- a/test/testdata/timed_contract/instance.yaml
+++ b/test/testdata/timed_contract/instance.yaml
@@ -22,7 +22,7 @@ rules:
       "Yearly Warner Studios license to Acme.co products"
     resource_prefix: "/company/warneranimstudios/"
     start: "2019-01-01T00:00:00Z"
-    end: "2020-01-01T00:00:00Z"
+    end: 2020-01-01T00:00:00Z
   - description: >
       "Yearly Disney license to Marvel products"
     resource_prefix: "/company/disneymarvel/"
