--- a/test/testdata/greeting/template.yaml
+++ b/test/testdata/greeting/template.yaml
@@ -89,10 +89,8 @@ validator:
     - match: hi.startsWith("Goodbye")
       message: greeting starts with a farewell word
       details: hi
-    - match: >
-        rule.conditions.exists(expr, !compile(expr))
-      message: could not compile condition
 evaluator:
+  environment: greeting.v1alpha1.Environment
   terms:
     hi: rule.greeting
     bye: rule.farewell
@@ -105,6 +103,10 @@ evaluator:
     - match: bye != '' && hi == ''
       decision: policy.acme.depart
       output: bye
+    - match: >
+        rule.conditions.exists(expr, !compile(expr))
+      decision: policy.violation
+      output: could not compile condition
     - match: hi != '' && bye != ''
       decisions:
         - decision: policy.acme.welcome
