Minor fixes for list finalizing and error reporting (#41)
* Minor fixes for list finalizing and error reporting
* Additional updates based on error that wasn't being reported before for missing bindings
* Removed 'compile' condition from greeting template

--- a/test/testdata/greeting/template.yaml
+++ b/test/testdata/greeting/template.yaml
@@ -89,10 +89,8 @@ validator:
     - match: hi.startsWith("Goodbye")
       message: greeting starts with a farewell word
       details: hi
-    - match: >
-        rule.conditions.exists(expr, !compile(expr))
-      message: could not compile condition
 evaluator:
+  environment: greeting.v1alpha1.Environment
   terms:
     hi: rule.greeting
     bye: rule.farewell
