Improved test coverage and simplifications for model/value.go

--- a/test/testdata/greeting/template.yaml
+++ b/test/testdata/greeting/template.yaml
@@ -92,6 +92,7 @@ validator:
 evaluator:
   environment: greeting.v1alpha1.Environment
   terms:
+    time: 2020-01-01T00:00:00Z
     hi: rule.greeting
     bye: rule.farewell
     after: >
